[gd_scene load_steps=3 format=3 uid="uid://c3qh5dn8xmr2v"]

[ext_resource type="Script" path="res://screens/character_selection_screen.gd" id="1_v5kqc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_list_bg"]
bg_color = Color(0.08, 0.08, 0.1, 0.9)
border_width_left = 2
border_color = Color(0.2, 0.2, 0.2, 1)

[node name="CharacterSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5kqc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.07, 1)

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PreviewArea" type="Control" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="CharacterPreviewAnchor" type="Control" parent="MainLayout/PreviewArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterInfoContainer" type="VBoxContainer" parent="MainLayout/PreviewArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2
theme_override_constants/separation = 8

[node name="CharNameLabel" type="Label" parent="MainLayout/PreviewArea/CharacterInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Nombre del Personaje"
horizontal_alignment = 1

[node name="CharDetailsLabel" type="Label" parent="MainLayout/PreviewArea/CharacterInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Nivel 1 Humano Mago"
horizontal_alignment = 1

[node name="CharLocationLabel" type="Label" parent="MainLayout/PreviewArea/CharacterInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Mapa: 1"
horizontal_alignment = 1

[node name="AccountLabel" type="Label" parent="MainLayout/PreviewArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
text = "Cuenta: USERNAME"
horizontal_alignment = 2

[node name="SidePanel" type="PanelContainer" parent="MainLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_list_bg")

[node name="MarginContainer" type="MarginContainer" parent="MainLayout/SidePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/SidePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PERSONAJES"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterList" type="VBoxContainer" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ActionsContainer" type="VBoxContainer" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ConnectButton" type="Button" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ENTRAR AL MUNDO"

[node name="HSeparator" type="HSeparator" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CreateButton" type="Button" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "CREAR PERSONAJE"

[node name="DeleteButton" type="Button" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "BORRAR PERSONAJE"

[node name="HSeparator2" type="HSeparator" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LogoutButton" type="Button" parent="MainLayout/SidePanel/MarginContainer/VBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "SALIR"
